要素の操作まで完了。ここは最重要復習ポイントだ

--- a/01_テキスト/01_JavaScriptで要素を操作する/index.html
+++ b/01_テキスト/01_JavaScriptで要素を操作する/index.html
@@ -12,6 +12,15 @@
     .great-element {
       color: aqua;
     }
+    .Y{
+      font-size: 35px;
+    }
+    .zou{
+      color: red;
+    }
+    .hello{
+      padding: 30px;
+    }
   </style>
 </head>
 <body>
@@ -80,6 +89,29 @@
       <div>↑かつてここに要素がありました</div>
     </div>
   </section>
+
+  <section><div id="elementnoId">ぼく、要素！</div</section>>
+  <section>
+    <div id="buttons">
+      <button>0</button>
+      <button>1</button>
+      <button>2</button>
+      <button>3</button>
+      <button>4</button>
+      <button>5</button>
+      <button>6</button>
+      <button>7</button>
+      <button>8</button>
+      <button>9</button>
+    </div>
+  </section>
+
+  <div id="E">かわむー</div>
+  <div id="F" style="color:black;" class="yohoo">やふぞう</div>
+  <div id="G" class="Y">やふぞう</div>
+  <div id="keronnu">
+    <div id="kaeru">ケロケロ</div>
+  </div>
 
   <!-- 以下の一行で main.js ファイルを読み込む -->
   <script src="main.js"></script>
