入力受け取ってFizzBuzz返すやつできたー！

--- a/02_レシピ/発展問題/FizzBuzz/index.html
+++ b/02_レシピ/発展問題/FizzBuzz/index.html
@@ -11,8 +11,14 @@
       .form {
         border: 1px solid black;
       }
+      .batton {
+        border: 1px solid black;
+        color: black;
+        background-color: gray;
+      }
     </style>
-    <input size="40" type="number" class="form" id="Element" id="Element" />
+    <input id="Element" size="40" type="number" class="form" />
+    <input type="submit" class="batton" id="click" />
     <script src="main.js"></script>
   </body>
 </html>
