プログラミングの考え方

--- a/04_ゼミ/week1/pairwork.html
+++ b/04_ゼミ/week1/pairwork.html
@@ -32,8 +32,8 @@
           "src",
           "https://1.bp.blogspot.com/-SPSAT5RhnCk/WxvKRA10-XI/AAAAAAABMoA/ONSiDNDxiroz9QwjMES3qlqcv8uX4JlQQCLcBGAs/s400/music_headphone_woman.png",
         )
-        document.getElementById("reading").setAttribute("disabled", true)
-        document.getElementById("camp").setAttribute("disabled", true)
+        reading.setAttribute("disabled", true)
+        camp.setAttribute("disabled", true)
       }
       reading.onclick = function() {
         choice.textContent = "はずれ！最近あんまし本読んでない……"
@@ -41,8 +41,8 @@
           "src",
           "https://1.bp.blogspot.com/-3vLse3-fSSs/XwkxcjGdlbI/AAAAAAABaAc/AePrl7fI3vUH5Fsdu9JlDEcDEWRCzulSwCNcBGAsYHQ/s400/eye_ganseihirou_book_woman.png",
         )
-        document.getElementById("music").setAttribute("disabled", true)
-        document.getElementById("camp").setAttribute("disabled", true)
+        music.setAttribute("disabled", true)
+        camp.setAttribute("disabled", true)
       }
       camp.onclick = function() {
         choice.textContent = "はずれ！インドア派なんです！！"
@@ -50,8 +50,8 @@
           "src",
           "https://2.bp.blogspot.com/-mz-h_JDXNPc/WevpCDO-doI/AAAAAAABHvU/Pcxfm0DSkMYnG3kefmMpJpm5g20wxxRYgCLcBGAs/s450/camp_gramping.png",
         )
-        document.getElementById("music").setAttribute("disabled", true)
-        document.getElementById("reading").setAttribute("disabled", true)
+        music.setAttribute("disabled", true)
+        reading.setAttribute("disabled", true)
       }
     </script>
   </body>
