クイズの発展問題　☆1のやつ(オリジナル機能付き)

--- a/02_レシピ/発展問題/マイクイズ/index.html
+++ b/02_レシピ/発展問題/マイクイズ/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="quiz-container">
       <h2 id="quiz-text"></h2>
-      <img class="image" id="quiz-image" />
+      <img id="quiz-image" />
       <div id="choices-container">
         <button id="choice-1"></button>
         <button id="choice-2"></button>
