--- a/02_レシピ/発展問題/複数リスト/02_Trello（保存機能なし）/index.html
+++ b/02_レシピ/発展問題/複数リスト/02_Trello（保存機能なし）/index.html
@@ -1,35 +1,32 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    <title>Trello?</title>
+    <title>Trello</title>
   </head>
   <body>
     <header>
       <div class="header-title">Trello?</div>
     </header>
-    <div class="main-container" id="main-container">
-      <div class="list-container" id="list-container0">
-        <div class="list-header" id="list-header0">ギークサロン</div>
-        <div class="cards-container" id="cards-container0">
+    <div class="main-container">
+      <div class="list-container">
+        <div class="list-header">ギークサロン</div>
+        <div class="cards-container" id="cards-container">
           <!-- ここにカードを追加する -->
         </div>
-        <div class="list-footer" id="list-footer0">
-          <div class="input-container" id="input-container0">
-            <input type="text" class="input-todo" id="input-todo0" />
-            <div class="input-button" id="add-button0">追加</div>
+        <div class="list-footer">
+          <div class="input-container">
+            <input type="text" class="input-todo" id="input-todo" />
+            <div class="input-button" id="add-button">追加</div>
           </div>
         </div>
-        <div class="category" id="category0">
-          <div class="add-category" id="add-category0">＋カードを追加</div>
-        </div>
       </div>
-      <div class="list-container1">
-        <div class="list-header1">大学</div>
-        <div class="cards-container1">
+      <div class="list-container">
+        <div class="list-header">大学</div>
+        <div class="cards-container" id="cards-container1">
           <div class="card">
             <div class="todo">これをやる</div>
             <div class="delete"></div>
@@ -39,20 +36,18 @@
             <div class="delete"></div>
           </div>
         </div>
-        <div class="list-footer" id="list-footer1">
-          <div class="input-container" id="input-container1">
+        <div class="list-footer">
+          <div class="input-container">
             <input type="text" class="input-todo" id="input-todo1" />
             <div class="input-button" id="add-button1">追加</div>
           </div>
-        </div>
-        <div class="category" id="category1">
-          <div class="add-category" id="add-category1">＋カードを追加</div>
+          <div>＋カードを追加</div>
         </div>
       </div>
-      <div class="list-container2">
-        <div class="list-header2">家事</div>
-        <div class="cards-container2">
-          <div class="card2">
+      <div class="list-container">
+        <div class="list-header">家事</div>
+        <div class="cards-container" id="cards-container2">
+          <div class="card">
             <div class="todo">あれをやる</div>
             <div class="delete"></div>
           </div>
@@ -66,9 +61,7 @@
             <input type="text" class="input-todo" id="input-todo2" />
             <div class="input-button" id="add-button2">追加</div>
           </div>
-        </div>
-        <div class="category" id="category2">
-          <div class="add-category" id="add-category2">＋カードを追加</div>
+          <div>＋カードを追加</div>
         </div>
       </div>
     </div>
